listo config